# aurora

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
api/: Dockerfile  README.md  alembic.ini  config.yaml  pyproject.toml  requirements.txt
api/alembic/: env.py
api/alembic/versions/: 4d6f8f8f9a10_add_multi_user_and_sandbox_bindings.py  9f3b7e1d2c4a_migrate_sandbox_bindings_to_user_scope.py  c0c4b6d4feaf_add_system_config_and_session_sandbox_pool.py
api/app/: main.py
api/app/interfaces/: service_dependencies.py
api/core/: config.py
api/tests/: conftest.py
docs/: dsw-deploy.md  local-development.md
nginx/conf.d/: default.conf
sandbox/: Dockerfile  README.md  package.json  pyproject.toml  supervisord.conf
sandbox/app/: main.py
sandbox/app/core/: config.py
sandbox/app/interfaces/endpoints/: file.py  shell.py
sandbox/app/interfaces/errors/: exception_handler.py
sandbox/app/models/: shell.py
sandbox/app/services/: file.py  shell.py  supervisor.py
scripts/: dev-down.sh  dev-up.sh  dsw-app-onebox.sh  dsw-app-start.sh  dsw-sandbox-onebox.sh
ui/: Dockerfile  README.md  next.config.ts  package-lock.json  package.json
ui/src/app/: layout.tsx  page.tsx
ui/src/components/: app-shell.tsx  aurora-icon.tsx  aurora-settings.tsx  chat-header.tsx  chat-message.tsx  left-panel.tsx  sandbox-connection-prompt.tsx  session-detail-view.tsx  session-item.tsx  session-list.tsx  tool-preview-panel.tsx  vnc-overlay.tsx  vnc-viewer.tsx
ui/src/lib/: auth.ts
(+69 files in other folders)
