[project]
name = "sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.9"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.124.0",
    "httpx>=0.28.1",
    "jieba>=0.42.1",
    "lxml>=6.0.2",
    "numpy>=2.3.3",
    "openpyxl>=3.1.5",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "pillow>=12.0.0",
    "polars>=1.35.1",
    "pyarrow>=21.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.1.3",
    "pyyaml>=6.0.3",
    "python-multipart>=0.0.20",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.38.0",
    "xlsxwriter>=3.2.9",
]
